--- a/coding_evo_13sep/evo2.css
+++ b/coding_evo_13sep/evo2.css
@@ -5,6 +5,7 @@
 body{
     background-color: black;
 }
+/*------------------big box css ---------------->*/
 #big{
    width: 85%;
    background: white;
@@ -17,6 +18,7 @@ body{
     font-size: 20px;
     padding-left: 20px;
 }
+/*----------------------challenge img box css --------------------------*/
 .challenge{
     display: grid;
     grid-template-columns: 30% 30% 30%;
@@ -54,6 +56,7 @@ h3 + p{
 #explore > div{
     border: 1px solid black;
 }
+   /*<--------------------arrow css ----------------->*/
 .float{
     float: right;
     clear: both;
